kubernetes/sonarr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.nas.dogeek.me
    external-dns.alpha.kubernetes.io/target: nas.dogeek.me
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - sonarr.nas.dogeek.me
    secretName: sonarr-cert-prod
  rules:
  - host: sonarr.nas.dogeek.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: http
